--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+
+body {
+  background-color: #90dbf8 ;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input {
+  width: 300px;
+  height: 30px;
+  border-radius: 10px;
+  border: 2px solid #2874a6;
+  outline: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn_add {
+  background-color: #2874a6;
   color: white;
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: 600;
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.btns {
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+  gap: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  width: 90px;
+  background-color: #2874a6;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 600;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.delete_btn {
+  width: 90px;
+  background-color: red;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 600;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.listBtns {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  margin-bottom: 10px;
 }
