--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,656 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.custom-select-login .ant-select-selection-placeholder {
+  color: #5abccd;
+  font-size: 0.875rem;
+  font-weight: 600;
+  text-transform: none;
+  margin-left: 0.25rem;
+}
+
+.custom-select-login {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: #a5a5a5;
+  font-weight: 600;
+  font-size: 0.875rem;
+  box-shadow: 0px 0px 0.5rem #00000014;
+  border-radius: 0.375rem;
+}
+
+.ant-dropdown-menu-title-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center !important;
+  width: 100%;
+}
+
+/* Two layer Submenu heading and arrow- Stock-> Purchased materials */
+
+.custom-submenu .ant-dropdown-menu-item > .anticon:first-child,
+.ant-dropdown-menu-submenu-title > .anticon:first-child,
+.ant-dropdown-menu-item > a > .anticon:first-child,
+.ant-dropdown-menu-submenu-title > a > .anticon:first-child,
+.ant-dropdown-menu-item > span > .anticon:first-child,
+.ant-dropdown-menu-submenu-title > span > .anticon:first-child {
+  color: #5abccd !important;
+}
+
+.custom-submenu .ant-dropdown-menu-submenu-title {
+  color: #5abccd !important;
+  font-size: 12px !important;
+  font-weight: 600 !important;
+  font-family: Montserrat !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.custom-submenu .ant-dropdown-menu-item .ant-dropdown-menu-submenu-expand-icon,
+.custom-submenu
+  .ant-dropdown-menu-submenu-title
+  .ant-dropdown-menu-submenu-expand-icon {
+  margin-top: -6px !important;
+}
+
+.ant-dropdown-menu-submenu-popup ul {
+  border-radius: 5px !important;
+}
+
+/* Drawer */
+
+.custom-drawer .ant-drawer-body,
+.custom-drawer .ant-drawer-footer {
+  padding: 0;
+}
+
+/* Imafe upload */
+
+.custom-upload .ant-upload-list-item {
+  /* position: absolute !important;
+  bottom: -20px !important;
+  left: 5px !important; */
+  display: none;
+}
+
+.custom-upload .ant-upload {
+  width: 100%;
+  height: 100%;
+}
+
+/* Side bar hover images*/
+
+.child-light {
+  display: none;
+}
+
+.main-parent:hover .child-light {
+  display: block;
+}
+.main-parent:hover .child-dark {
+  display: none;
+}
+
+/* Side bar */
+
+.ant-layout-sider-children {
+  width: 100%;
+}
+
+.custom-password-input .ant-input {
+  font-size: 13px !important;
+  font-weight: 600;
+}
+
+.custom-drag .ant-upload-drag {
+  background: white !important;
+  border: 1.2px solid #a5a5a5;
+  border-style: dashed;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #dadcde;
+  border-radius: 15px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  cursor: pointer;
+}
+
+.custom-datepicker .ant-picker-footer,
+.custom-datepicker .ant-picker-header-super-next-btn,
+.custom-datepicker .ant-picker-header-super-prev-btn {
+  display: none;
+}
+.custom-datepicker .ant-picker-header {
+  background: #5abccd;
+}
+
+.custom-datepicker .ant-picker-header-view .ant-picker-month-btn,
+.custom-datepicker .ant-picker-header-view .ant-picker-year-btn,
+.custom-datepicker .ant-picker-header-next-btn,
+.custom-datepicker .ant-picker-header-prev-btn {
+  color: white;
+  font-size: 0.875rem;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.custom-input .ant-input {
+  font-weight: 600;
+}
+
+.date-bold .ant-picker-input > input {
+  font-weight: 600;
+}
+
+.custom-placeholder .ant-input-affix-wrapper > input.ant-input {
+  font-size: 12px !important;
+  font-weight: 500 !important;
+}
+
+.custom-datepicker .ant-picker-panel-container {
+  margin-left: -1.75rem;
+  border-radius: 0.5rem;
+}
+
+.custom-timepicker .ant-picker-panel {
+  width: 100%;
+}
+
+.custom-timepicker .ant-picker-panel-container {
+  border-radius: 0.5rem;
+}
+
+.custom-timepicker .ant-picker-time-panel {
+  margin: 0;
+  padding: 0;
+}
+
+/* error message */
+.ant-message-error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ant-message-success {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Collapse for filters */
+
+.custom-collapse-filter .ant-collapse-content > .ant-collapse-content-box {
+  padding-top: 0px !important;
+  padding-left: 16px !important;
+  padding-bottom: 12px !important;
+}
+
+.custom-collapse-filter .ant-collapse-content,
+.custom-collapse-filter .ant-collapse-item,
+.custom-collapse-filter .ant-collapse-content-active {
+  border-bottom: 1px solid #f3f5f7 !important;
+}
+
+.custom-collapse-filter .ant-collapse-item {
+  border: none;
+}
+
+/* Collpase for show and hide in general */
+
+.custom-collapse .ant-collapse-arrow {
+  padding-right: 12px !important;
+}
+
+.custom-collapse .ant-collapse-header {
+  padding-left: 25px !important;
+}
+
+.custom-collapse .ant-collapse-content > .ant-collapse-content-box {
+  padding-top: 0px !important;
+  padding-left: 25px !important;
+  padding-right: 25px !important;
+  /* padding-left: 16px !important; */
+  padding-bottom: 12px !important;
+}
+
+.custom-collapse .ant-collapse-content,
+.custom-collapse .ant-collapse-item,
+.custom-collapse .ant-collapse-content-active {
+  border-radius: 0.5rem !important;
+  border-bottom: none !important;
+  border: none;
+}
+
+.custom-collapse .ant-collapse-item {
+  border: none;
+}
+
+.custom-tabs .ant-tabs-tab .ant-tabs-tab-btn {
+  color: #5abccd;
+  font-size: 0.8125rem;
+  font-weight: 600;
+  font-family: Montserrat;
+  /* margin-right: 1rem !important; */
+}
+
+.custom-tabs .ant-tabs-tabpane {
+  margin-top: -0.8rem;
+}
+
+.custom-tabs .ant-tabs-tab {
+  /* padding-left: 1rem; */
+  margin-left: 1rem !important;
+}
+
+.custom-tabs .ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: black;
+}
+
+.custom-tabs .ant-tabs-ink-bar {
+  border-bottom: 2.5px solid black;
+}
+
+.custom-sort .ant-table-thead .ant-table-cell .ant-table-column-sorter-inner {
+  display: none;
+}
+
+.custom-sort .ant-table-thead .ant-table-cell {
+  background: white !important;
+}
+
+.custom-table .ant-table-thead .ant-table-cell {
+  background-color: #f3f5f7 !important;
+  box-shadow: none;
+  border: none;
+}
+
+.custom-table .ant-table-thead tr,
+.custom-table table tr td:first-child {
+  border-top-left-radius: 0.375rem !important;
+  border-bottom-left-radius: 0.375rem !important;
+}
+
+.custom-table .ant-table-thead tr,
+.custom-table table tr td:last-child {
+  border-top-right-radius: 0.375rem !important;
+  border-bottom-right-radius: 0.375rem !important;
+}
+
+.custom-table .ant-table-tbody .ant-table-row {
+  border-radius: 0.375rem;
+}
+
+.custom-table table {
+  background-color: #f3f5f7;
+  box-shadow: none;
+  border: none;
+  border-spacing: 0 0.6rem !important;
+}
+
+.custom-table .ant-table {
+  background-color: #f3f5f7;
+}
+
+.custom-table .ant-table-tbody .ant-table-row td {
+  border: none;
+}
+
+/* ************************************************************************************** */
+/* Box shadow for custom-table and .custom-mini-table */
+
+.custom-table .ant-table-tbody .ant-table-row {
+  border-radius: 0.375rem;
+  box-shadow: -2px 0 2px 2px #00000014 !important;
+  -webkit-border-radius: 0.375rem;
+  -webkit-box-shadow: -2px 0 8px 2px #00000014 !important;
+}
+
+.custom-table .ant-table-tbody .ant-table-row td:nth-last-child(2) {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+  box-shadow: 5px 0 5px -2px #00000014 !important;
+  z-index: 1;
+}
+
+.custom-table .ant-table-tbody .ant-table-row td:nth-last-child(1) {
+  background-color: #f3f5f7;
+  border: none;
+  padding: 0 !important;
+  box-shadow: 2px -2px 2px 4px #f3f5f7, 2px 2px 2px 4px #f3f5f7 !important;
+}
+
+.custom-mini-table .ant-table-tbody .ant-table-row td:nth-last-child(2),
+.custom-mini-table .ant-table-tbody .ant-table-row td:nth-last-child(1),
+.custom-mini-table .ant-table-tbody .ant-table-row {
+  box-shadow: none !important;
+}
+
+/* ************************************************************************************** */
+
+.custom-table table tr td {
+  background-color: white;
+  height: 4.3rem;
+}
+
+.custom-table .ant-table-row {
+  box-shadow: 0px 0px 0.5rem #00000014;
+  box-shadow: none;
+  border: none;
+}
+
+.custom-checkbox-table .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #5abccd !important;
+  border-color: #5abccd !important;
+}
+
+.custom-checkbox-table .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #5abccd !important;
+}
+
+.custom-checkbox-table .ant-checkbox-inner,
+.custom-table .ant-checkbox-inner {
+  border: 1px solid #5abccd !important;
+}
+
+.custom-checkbox-table .ant-checkbox,
+.custom-table .ant-checkbox {
+  margin-left: 0.5rem !important;
+}
+
+.custom-checkbox-table .ant-checkbox-inner {
+  background-color: transparent;
+  /* border: none; */
+  border-radius: none;
+}
+
+.ant-checkbox-checked .ant-checkbox-inner::after {
+  display: flex !important;
+}
+.ant-checkbox-inner {
+  background-color: #5abccd33;
+  border: none;
+  border-radius: 0.25rem;
+}
+
+.custom-table .ant-checkbox-indeterminate .ant-checkbox-inner::after {
+  background-color: transparent !important;
+}
+
+.custom-table .ant-checkbox-input {
+  background-color: transparent !important;
+}
+
+.custom-mini-table table {
+  background: white;
+  border-spacing: 0 0 !important;
+}
+
+.custom-mini-table .ant-table-thead .ant-table-cell {
+  background: white !important;
+}
+
+.custom-mini-table .ant-table-tbody .ant-table-row td:nth-last-child(1) {
+  background: white !important;
+  width: auto !important;
+}
+
+.custom-mini-table .ant-table-tbody .ant-table-row td:nth-last-child(2) {
+  border-radius: 0 !important;
+}
+
+.custom-mini-table .ant-table-thead > tr > th,
+.custom-mini-table .ant-table-tbody > tr > td,
+.custom-mini-table .ant-table tfoot > tr > th,
+.custom-mini-table .ant-table tfoot > tr > td {
+  padding: 0px !important;
+}
+
+.custom-mini-table table tr td {
+  height: 3rem !important;
+}
+
+.custom-mini-table .ant-table-tbody .ant-table-row {
+  border-radius: 0 !important;
+}
+
+.custom-mini-table .ant-table-tbody .ant-table-row td {
+  border-bottom: 1px solid #f3f5f7 !important;
+  border-radius: 0px !important;
+  padding-top: 0.3rem !important;
+  padding-bottom: 0.3rem !important;
+}
+
+.custom-mini-table .ant-table-thead tr th {
+  border-bottom: 1px solid #f3f5f7 !important;
+  padding-top: 0.3rem !important;
+  padding-bottom: 0.3rem !important;
+}
+
+.custom-select-order .ant-select-selection-placeholder {
+  color: #a5a5a5;
+  font-size: 0.875rem;
+  font-weight: 600;
+  text-transform: none;
+  margin-left: 0.25rem;
+}
+
+.custom-select-order {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: #a5a5a5;
+  font-weight: 600;
+  font-size: 0.875rem;
+  border-radius: 0.375rem;
+}
+
+.custom-select .ant-select-selector {
+  padding-left: 0px !important;
+}
+
+.custom-modal .ant-modal-footer,
+.custom-modal .ant-modal-header,
+.custom-modal .ant-modal-content {
+  border: none;
+  border-radius: 0.75rem 0.75rem 0.75rem 0.75rem;
+}
+.custom-modal-preview .ant-modal-footer,
+.custom-modal-preview .ant-modal-header,
+.custom-modal-preview .ant-modal-content {
+  border: none;
+  width: max-content;
+}
+
+.custom-modal-preview .ant-modal-body {
+  padding: 0 !important;
+  width: max-content;
+}
+
+.custom-modal-preview .ant-modal {
+  width: max-content !important;
+}
+
+.custom-modal-preview {
+  width: max-content !important;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+.anticon-close-circle {
+  color: #5abccd;
+}
+
+.anticon-close-circle:hover {
+  color: #5abccd;
+}
+
+.ant-input-suffix .anticon-close-circle {
+  color: #5abccd;
+}
+
+.custom-dragger .ant-upload-list-item {
+  display: none !important;
+}
+
+.custom-tabs-summary .ant-tabs-tab .ant-tabs-tab-btn {
+  color: #a5a5a5;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: Montserrat;
+}
+
+.custom-tabs-summary .ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: white;
+  background-color: #5abccd;
+}
+
+.custom-tabs-summary .ant-tabs-tab + .ant-tabs-tab {
+  margin: 0 !important;
+}
+
+.custom-tabs-summary .ant-tabs-ink-bar {
+  display: none;
+}
+
+.custom-tabs-summary .ant-tabs-tab {
+  padding: 0 !important;
+  border: 1px solid #e6e6e6 !important;
+}
+
+.custom-tabs-summary .ant-tabs-tab:first-child {
+  padding: 0 !important;
+  border-bottom-left-radius: 5px !important;
+  border-top-left-radius: 5px !important;
+}
+
+.custom-tabs-summary .ant-tabs-tab:nth-child(5) {
+  padding: 0 !important;
+  border-bottom-right-radius: 5px !important;
+  border-top-right-radius: 5px !important;
+}
+
+.custom-tabs-summary .ant-tabs-tab .ant-tabs-tab-btn {
+  padding: 10px !important;
+}
+
+.parent-class-summary .ant-tabs-top > .ant-tabs-nav::before,
+.parent-class-summary .ant-tabs-bottom > .ant-tabs-nav::before,
+.parent-class-summary .ant-tabs-top > div > .ant-tabs-nav::before,
+.parent-class-summary .ant-tabs-bottom > div > .ant-tabs-nav::before {
+  border-bottom: 0 !important;
+}
+
+.custom-tabs-summary .ant-tabs-nav-list {
+  border-radius: 5px;
+}
+
+.custom-table-summary .ant-table-thead tr th {
+  background-color: white !important;
+}
+
+/* Selling products  */
+.custom-tabs-selling-products .ant-tabs-tab .ant-tabs-tab-btn {
+  color: #a5a5a5;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: Montserrat;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: white;
+  background-color: #5abccd;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab + .ant-tabs-tab {
+  margin: 0 !important;
+}
+
+.custom-tabs-selling-products .ant-tabs-ink-bar {
+  display: none;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab {
+  padding: 0 !important;
+  border: 1px solid #e6e6e6 !important;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab:first-child {
+  padding: 0 !important;
+  border-bottom-left-radius: 5px !important;
+  border-top-left-radius: 5px !important;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab:nth-child(2) {
+  padding: 0 !important;
+  border-bottom-right-radius: 5px !important;
+  border-top-right-radius: 5px !important;
+}
+
+.custom-tabs-selling-products .ant-tabs-tab .ant-tabs-tab-btn {
+  padding: 10px !important;
+}
+
+.custom-tabs-selling-products .ant-tabs-nav-list {
+  border-radius: 5px;
+}
+
+.container {
+  position: relative;
+}
+
+.container,
+#interactive.viewport {
+  width: 472px;
+  height: 300px;
+}
+
+#interactive.viewport canvas,
+video {
+  width: 472px;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#interactive.viewport canvas.drawingBuffer,
+video.drawingBuffer {
+  width: 472px;
+  height: 300px;
+}
+
+/* Image quality on scaling  */
+.img-scale {
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+}
